--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,11 @@
 					<path>/CounterWebApp</path>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>3.4.0</version>
+			</plugin>
 
 		</plugins>
 
